# tokenizer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
mbaitok/: __init__.py  mbaitok.py
